--- a/index.html
+++ b/index.html
@@ -637,15 +637,15 @@
             <div class="course-card priority">
                 <h3 class="highlight-accent">VIPコース</h3>
                 <p class="target-audience">最短で結果を出したい方、徹底的なサポートを求める方へ</p>
-                <p class="value-prop">講師による徹底指導で、成功への<strong class="highlight-accent">「最短ルート」</strong>を掴む。</p> {/* キャンペーン注釈を削除 */}
+                <p class="value-prop">講師による徹底指導で、成功への<strong class="highlight-accent">「最短ルート」</strong>を掴む。</p> {/* コメント削除 */}
                 <ul class="features-list">
                     <li>スタンダードコース全内容</li>
                     <li><strong class="highlight-accent">エントリ―精度UPのオリジナルインジケーター3種</strong></li>
                     <li><strong class="highlight-accent">Discord上での講師による個別指導</strong></li>
                 </ul>
                  <p class="price">
-                    <span style="display: block; margin-bottom: 5px; font-size: 1.1rem; color: var(--text);"> {/* 価格の色を通常テキスト色に */}
-                        入会金：30万円 {/* 価格変更、割引表示削除 */}
+                    <span style="display: block; margin-bottom: 5px; font-size: 1.1rem; color: var(--text);"> {/* コメント削除 */}
+                        入会金：30万円 {/* コメント削除 */}
                     </span>
                     <span>29,800円<span class="price-note">/ 月 (税込)</span></span>
                 </p>
