--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             margin: 20px 0;
             border-radius: 4px;
         }
-        .testimonial p:last-of-type { /* 最後のpタグ（著者名）のマージン調整 */
+        .testimonial p:last-of-type {
              margin-bottom: 0;
         }
 
@@ -509,46 +509,17 @@
              line-height: 1.4;
          }
         .feature-block .text-content p {
-            margin: 0 0 1em 0; /* pタグの下に少しマージンを追加 */
+            margin: 0 0 1em 0;
             line-height: 1.7;
             color: #444;
         }
-        .feature-block .text-content p:last-child { /* 各ブロックの最後のpタグのマージンは削除 */
+        .feature-block .text-content p:last-child {
              margin-bottom: 0;
         }
         .feature-block .text-content p .highlight {
             color: var(--primary);
             font-weight: bold;
         }
-
-
-        /* Campaign Banner (削除されたが念のため残す) */
-        /*
-        .campaign-banner {
-            background: linear-gradient(135deg, #0056b3, #007bff);
-            color: white;
-            padding: 15px 25px;
-            border-radius: 8px;
-            text-align: center;
-            margin-bottom: 30px;
-            box-shadow: 0 4px 15px rgba(0, 86, 179, 0.3);
-        }
-        .campaign-banner h3 {
-            color: white;
-            margin: 0 0 10px 0;
-            font-size: 1.3rem;
-        }
-        .campaign-banner p {
-             margin: 0;
-             font-size: 1.1rem;
-        }
-        .campaign-banner .note {
-             font-size: 0.9rem;
-             opacity: 0.9;
-             display: block;
-             margin-top: 5px;
-        }
-        */
 
         /* Final CTA */
         .final-cta p {
@@ -648,8 +619,6 @@
 
             .btn { padding: 10px 20px; }
             .feature-block .text-content h3 { font-size: 1.2rem; }
-            /* .campaign-banner h3 { font-size: 1.2rem; } */ /*削除された要素*/
-            /* .campaign-banner p { font-size: 1rem; } */ /*削除された要素*/
             .final-cta p { font-size: 1rem; }
             .final-cta .cta-button { font-size: 1rem; padding: 12px 20px; }
          }
@@ -832,18 +801,15 @@
         </div>
 
         <!-- メンバーの声タイトル-->
-        <h2>「1人じゃ無理だった」を乗り越えた方々の声</h2> {/* タイトル変更 */}
-
-        {/* キャンペーンバナー削除 */}
-        {/* スタンダードコース申込ボタン削除 */}
+        <h2>「1人じゃ無理だった」を乗り越えた方々の声</h2>
 
         <div class="testimonial">
-            <p>「長年、独学でFXをやってきましたが、勝ったり負けたりで全く資産が増えず…。正直、もう自分には無理だと諦めかけていました。でも、このコミュニティに入って『環境』の大切さを痛感しました。マイティ―さんの考察は勿論、コミュニティ内で質問できる安心感が大きいです。先日、メンバーさんの投稿を見て『あ、ここだ！』とエントリーし、1トレードで4万円の利益が出ました。1人で悶々としていた頃が嘘のようです。」</p> {/* テキスト変更 */}
+            <p>「長年、独学でFXをやってきましたが、勝ったり負けたりで全く資産が増えず…。正直、もう自分には無理だと諦めかけていました。でも、このコミュニティに入って『環境』の大切さを痛感しました。マイティ―さんの考察は勿論、コミュニティ内で質問できる安心感が大きいです。先日、メンバーさんの投稿を見て『あ、ここだ！』とエントリーし、1トレードで4万円の利益が出ました。1人で悶々としていた頃が嘘のようです。」</p>
             <p class="testimonial-author">- T.S. 様 (52歳・会社員)</p>
         </div>
 
         <div class="testimonial">
-            <p>「定年後の生活に不安を感じ、FXを始めましたが、ネットの情報だけではさっぱり…。『年のせいかな』と自信をなくしていました。Alpha Pipsさんの手法は本当にシンプルで、私のようなPC初心者でも理解できました。スタンダードコースのコミュニティでは、同じような年代の方もいて心強いです。先月は月18万円ほどの利益ですが、『自分でもできるんだ』という実感が何より嬉しいです。」</p> {/* テキスト変更 */}
+            <p>「定年後の生活に不安を感じ、FXを始めましたが、ネットの情報だけではさっぱり…。『年のせいかな』と自信をなくしていました。Alpha Pipsさんの手法は本当にシンプルで、私のようなPC初心者でも理解できました。スタンダードコースのコミュニティでは、同じような年代の方もいて心強いです。先月は月18万円ほどの利益ですが、『自分でもできるんだ』という実感が何より嬉しいです。」</p>
             <p class="testimonial-author">- K.M. 様 (67歳・元教員)</p>
         </div>
 
