--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 
             <!-- VIP Course -->
             <div class="course-card priority">
-                <h3 class="highlight-accent">VIPコース <span class="limited-badge">（毎月限定5名）</span></h3> {/* 限定枠追加 */}
+                <h3 class="highlight-accent">VIPコース <span class="limited-badge">（毎月限定5名）</span></h3>
                 <p class="value-prop">講師による徹底指導で、成功への<strong class="highlight-accent">「最短ルート」</strong>を掴む。</p>
                 <ul class="features-list">
                     <li>スタンダードコース全内容</li>
@@ -744,8 +744,7 @@
                     <li><strong class="highlight-accent">Discord上での講師による個別指導</strong></li>
                 </ul>
                  <p class="price">
-                     {/* 入会金表示削除 */}
-                    <span>49,800円<span class="price-note">/ 月 (税込)</span></span> {/* 月額料金変更 */}
+                    <span>49,800円<span class="price-note">/ 月 (税込)</span></span>
                 </p>
                 <div class="button-wrapper">
                     <a href="#payment-priority" class="btn btn-accent btn-block">VIPコースで最短上達を目指す</a>
@@ -793,8 +792,8 @@
                     <tr>
                         <td>オリジナルインジケーター</td>
                         <td>-</td>
-                        <td>✓</td> {/* チェックマークに変更 */}
-                        <td>✓</td> {/* チェックマークに変更 */}
+                        <td>✓</td>
+                        <td>✓</td>
                     </tr>
                     <tr>
                         <td>質問対応</td>
