--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-     <!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -325,7 +325,7 @@
         }
         .comparison-table th, .comparison-table td {
             padding: 16px 20px; text-align: center; border: 1px solid var(--cyber-border-color);
-            white-space: normal; /* Allow text to wrap */
+            white-space: normal;
             color: var(--cyber-text-secondary);
             vertical-align: middle;
         }
@@ -342,7 +342,7 @@
             text-align: left; font-weight: 500; color: var(--cyber-text-primary);
             background-color: var(--cyber-bg-light-hover);
         }
-        .comparison-table tbody td strong { color: var(--cyber-accent-pink); } /* Default strong in table */
+        .comparison-table tbody td strong { color: var(--cyber-accent-pink); }
         .comparison-table tbody td:nth-child(3) { background-color: rgba(0, 242, 234, 0.05); }
         .comparison-table tbody td:nth-child(3) strong { color: var(--cyber-accent-cyan); }
 
@@ -569,8 +569,8 @@
                     <ul class="features-list">
                         <li>マイティ―のチャート考察</li>
                         <li>オリジナル手法解説</li>
-                        <li>メンバー限定交流部屋</li>
-                        <li><strong class="highlight-feature">AI活用（ライフハック）情報提供</strong><br><small>(ChatGPT基本操作、お得情報事例など)</small></li>
+                        <li>メンバー交流部屋</li>
+                        <li>AI活用（ライフハック）情報提供</li>
                     </ul>
                     <div class="price-container">
                         <span class="original-price">通常 5,980円/月</span>
@@ -588,10 +588,12 @@
                     <h3>スタンダードコース <span class="popular-badge"><span class="star-icon">★</span>No.1 人気</span></h3>
                     <p class="value-prop"><strong>本気で資産を増やし、人生を豊かにしたいあなたへ。</strong>AIトレードツールとプロのノウハウで最速で結果を目指す決定版！</p>
                     <ul class="features-list">
-                        <li>ライトコース全内容</li>
+                        <li>マイティ―のチャート考察</li>
+                        <li>オリジナル手法解説 (フルアクセス)</li>
+                        <li>メンバー交流部屋</li>
+                        <li>AI活用（ライフハック）情報提供</li>
                         <li><strong class="highlight-feature">AIトレード支援ツール「AIマイティ―」利用権</strong></li>
                         <li><strong class="highlight-feature">AIトレードセットアップ「ATZ System」利用権</strong></li>
-                        <li><small>AIライフハック (応用編プロンプト等も提供)</small></li>
                     </ul>
                     <div class="price-container">
                         <span class="free-trial-info">14日間 ¥0</span>
@@ -610,11 +612,15 @@
                 <!-- VIP Course -->
                 <div class="course-card priority">
                     <h3>VIPコース <span class="limited-badge">（毎月限定5名）</span></h3>
-                    <p class="value-prop">講師マイティ―による<strong style="color: var(--accent-vip-color);">トレード個別徹底指導</strong>で、成功への「最短・最速ルート」を掴む特別プラン。</p>
+                    <p class="value-prop">講師マイティ―による<strong style="color: var(--accent-vip-color);">個別サポート</strong>で、成功への「最短・最速ルート」を掴む特別プラン。</p>
                     <ul class="features-list">
-                        <li>スタンダードコース全内容</li>
-                        <li><strong class="highlight-vip">Discordでの講師によるトレード個別指導</strong></li>
-                        <li><strong class="highlight-vip">最優先での質問回答サポート</strong></li>
+                        <li>マイティ―のチャート考察</li>
+                        <li>オリジナル手法解説 (フルアクセス)</li>
+                        <li>メンバー交流部屋</li>
+                        <li>AI活用（ライフハック）情報提供</li>
+                        <li><strong class="highlight-feature">AIトレード支援ツール「AIマイティ―」利用権</strong></li>
+                        <li><strong class="highlight-feature">AIトレードセットアップ「ATZ System」利用権</strong></li>
+                        <li><strong class="highlight-vip">質問への個別優先対応</strong></li>
                     </ul>
                     <div class="price-container">
                         <span class="original-price">通常 49,800円/月</span>
@@ -661,9 +667,9 @@
                         </tr>
                         <tr>
                             <td>AI活用(ライフハック)情報</td>
-                            <td>基本編</td>
-                            <td><strong>✓ 応用編含む</strong></td>
-                            <td><strong>✓ 応用編含む</strong></td>
+                            <td>✓</td>
+                            <td><strong>✓</strong></td>
+                            <td><strong>✓</strong></td>
                         </tr>
                         <tr>
                             <td>AIトレード支援ツール「AIマイティ―」</td>
@@ -684,19 +690,13 @@
                             <td><strong>個別優先対応</strong></td>
                         </tr>
                         <tr>
-                            <td>講師によるトレード個別指導</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td><strong>✓ マンツーマン</strong></td>
-                        </tr>
-                        <tr>
                             <td>無料お試し期間</td>
                             <td>-</td>
                             <td><strong>✓ 14日間</strong></td>
                             <td>-</td>
                         </tr>
                          <tr>
-                            <td>クーポン割引(永久50%OFF)</td>
+                            <td>クーポン割引</td>
                             <td><strong>✓</strong></td>
                             <td><strong>✓</strong></td>
                             <td><strong>✓</strong></td>
